completed homepage less and navigation less files

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body>
 
+
      
   <div class="container home">
 
@@ -23,14 +24,21 @@
     <section class="navigation">
         
       <h1>Fun Bus</h1>
-      <a href="">Home</a>
-      <a href="">About us</a>
-      <a href="">Blog</a>
-      <a href="">Contact</a>
 
+      <div class="navigation-items">
+        <a href="">Home</a>
+        <a href="">About us</a>
+        <a href="">Blog</a>
+        <a href="">Contact</a>
+      </div>
     </section>
+  </div>
 
+  <div class="top-border">
 
+  </div>
+
+  <div class="container home">
     <section class="header">
 
       <img src="img/fun-bus.jpg" alt="photo of a yellow volkswagen bus toy in the foreground of a field of sand">
